--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
-  "name": "myResolutions",
+  "name": "myresolutions",
   "private": true,
   "scripts": {
     "start": "meteor run"
   },
   "dependencies": {
-    "meteor-node-stubs": "~0.2.0"
-  }
+    "meteor-node-stubs": "~0.2.0",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2"
+  },
+  "description": "",
+  "version": "1.0.0",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ibaena/todo-react.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ibaena/todo-react/issues"
+  },
+  "homepage": "https://github.com/ibaena/todo-react#readme"
 }
