--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "dependencies": {
     "meteor-node-stubs": "~0.2.0",
     "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "^15.0.2",
+    "react-mounter": "^1.2.0"
   },
   "description": "",
   "version": "1.0.0",
