--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   },
   "dependencies": {
     "meteor-node-stubs": "~0.2.0",
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2",
+    "react": "^15.1.0",
+    "react-addons-css-transition-group": "^15.1.0",
+    "react-dom": "^15.1.0",
     "react-mounter": "^1.2.0"
   },
   "description": "",
